--- a/package.json
+++ b/package.json
@@ -12,14 +12,22 @@
     "eslint": "^7.17.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.6"
   },
   "scripts": {
     "start": "babel-node index.js",
     "dev": "nodemon --exec yarn start",
-    "lint": "eslint index.js src"
+    "lint": "eslint index.js src",
+    "test": "jest",
+    "test:watch": "jest --watchAll"
   },
   "dependencies": {
     "crypto-js": "^4.0.0"
+  },
+  "jest": {
+    "silent": true,
+    "verbose": true,
+    "testEnvironment": "node"
   }
 }
