configure p2p in webserver and add dotenv package - configuration

--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
   },
   "scripts": {
     "start": "babel-node ./src/services/index.js",
+    "start:socket": "set HTTP_PORT=3001 && set P2P_PORT=5001 && set PEERS=ws:localhost:5000 && babel-node ./src/services/index.js",
+    "start:socket2": "set HTTP_PORT=3002 && set P2P_PORT=5002 && set PEERS=ws:localhost:5000,ws:localhost:5001 && babel-node ./src/services/index.js",
     "dev": "nodemon --exec yarn start",
     "lint": "eslint index.js src",
     "test": "jest",
@@ -25,7 +27,9 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "crypto-js": "^4.0.0",
-    "express": "^4.17.1"
+    "dotenv": "^8.2.0",
+    "express": "^4.17.1",
+    "ws": "^7.4.2"
   },
   "jest": {
     "silent": true,
