--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "dev": "nodemon --exec yarn start",
     "lint": "eslint index.js src",
     "test": "jest",
-    "test:watch": "jest --watchAll"
+    "test:watch": "jest --watchAll",
+    "miner": "babel-node miner.js"
   },
   "dependencies": {
     "body-parser": "^1.19.0",
