--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "dotenv": "^8.2.0",
     "elliptic": "^6.5.3",
     "express": "^4.17.1",
+    "uuid": "^8.3.2",
     "ws": "^7.4.2"
   },
   "jest": {
