--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "nodemon": "^2.0.6"
   },
   "scripts": {
-    "start": "babel-node ./src/services/index.js",
+    "start": "babel-node ./src/services/initialize.js",
     "start:socket": "set HTTP_PORT=3001 && set P2P_PORT=5001 && set PEERS=ws:localhost:5000 && babel-node ./src/services/index.js",
     "start:socket2": "set HTTP_PORT=3002 && set P2P_PORT=5002 && set PEERS=ws:localhost:5000,ws:localhost:5001 && babel-node ./src/services/index.js",
     "dev": "nodemon --exec yarn start",
